<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/titleRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/banner_background" >
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleType="fitStart"
            android:contentDescription="@string/jci_logo"
            android:src="@drawable/logo_jci_clock" />
        
        <ImageButton
	        android:id="@+id/settingsButton"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
        	android:layout_marginRight="12dp"
        	android:layout_marginEnd="12dp"
        	android:contentDescription="@string/settings"
	        android:background="@drawable/settings_button"
	        android:src="@drawable/settings_32_white" />
        
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true"
        	android:gravity="center"
        	android:text="@string/app_name"
        	android:textSize="24sp"
        	android:textStyle="bold"
        	android:textColor="#003377" >
       	</TextView>
       	
        <ImageButton
	        android:id="@+id/backButton"
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
        	android:contentDescription="@string/back"
        	android:scaleType="fitStart"
        	android:background="#0FFF"
	        android:src="@drawable/back_64_blue" />
       	
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/screenTitleRelativeLayout"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:background="@color/screenTitleBackground"
	    android:orientation="vertical"
	    android:layout_below="@+id/titleRelativeLayout" >
	    
        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/set_fake_call"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/screenTitleColor" />

	</RelativeLayout>
	
    <TextView 
        android:id="@+id/timeLabel" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screenTitleRelativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/call_time"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/buttonBackground" />
    
    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/editText1"
        android:layout_below="@+id/timeLabel"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="40dp"
        android:background="#CCCCCC" />
    
    <TextView 
        android:id="@+id/callerLabel" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/editText1"
        android:layout_toStartOf="@+id/editText1"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_alignBaseline="@+id/editText1"
        android:text="@string/caller_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/buttonBackground" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@+id/setButton"
        android:layout_marginBottom="50dp"
        android:textColor="@color/buttonText"
        android:gravity="center"
        android:hint="@string/hint_caller"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:textColor="@color/buttonText"
        android:background="@color/buttonBackground"
        android:text="@string/set" />

</RelativeLayout>
