<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background" >
    
    <RelativeLayout
        android:id="@+id/titleRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/banner_background" >
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleType="fitStart"
            android:contentDescription="@string/jci_logo"
            android:src="@drawable/logo_jci_clock" />
        
        <ImageButton
	        android:id="@+id/settingsButton"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
        	android:layout_marginRight="12dp"
        	android:layout_marginEnd="12dp"
        	android:contentDescription="@string/settings"
	        android:background="@drawable/settings_button"
	        android:src="@drawable/settings_32_white" />
        
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true"
        	android:gravity="center"
        	android:text="@string/app_name"
        	android:textSize="24sp"
        	android:textStyle="bold"
        	android:textColor="#003377" >
       	</TextView>
       	
        <ImageButton
	        android:id="@+id/backButton"
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
        	android:contentDescription="@string/back"
        	android:scaleType="fitStart"
        	android:background="#0FFF"
	        android:src="@drawable/back_64_blue" />
       	
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/screenTitleRelativeLayout"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:background="@color/screenTitleBackground"
	    android:orientation="vertical"
	    android:layout_below="@+id/titleRelativeLayout" >
	    
        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/screenTitleColor" />

	</RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:background="@color/background"
	    android:orientation="vertical"
	    android:layout_marginTop="5dp"
	    android:layout_below="@+id/screenTitleRelativeLayout" >
	    
        <TextView
            android:id="@+id/warningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/warning_sms"
            android:textColor="#FFF" />

	</RelativeLayout>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_below="@+id/relativeLayout1"
	    android:layout_marginTop="30dp"
	    android:background="@color/background" >
	
	    <Button
	        android:id="@+id/buttonEmergencyMessage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/edit_message"
	        android:textColor="@color/buttonText"
	        android:background="@color/buttonBackground" />
	    
	    <Button
	        android:id="@+id/buttonEmergencyContacts"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/buttonEmergencyMessage"
	        android:layout_marginTop="20dp"
	        android:text="@string/change_emergency_contacts"
	        android:textColor="@color/buttonText"
	        android:background="@color/buttonBackground" />
	
	    <Button
	        android:id="@+id/numbersButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginBottom="30dp"
	        android:text="@string/useful_numbers"
	        android:textColor="@color/buttonText"
	        android:background="@color/buttonBackground" />
	    
	    <Switch
	        android:id="@+id/switchGPS"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/buttonEmergencyContacts"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="50dp"
	        android:text="@string/gps"
	        android:textStyle="bold"
	        android:textColor="@color/buttonText" />
	
	</RelativeLayout>
</RelativeLayout>
