<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/titleRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/banner_background" >
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleType="fitStart"
            android:contentDescription="@string/jci_logo"
            android:src="@drawable/logo_jci_clock" />
        
        <ImageButton
	        android:id="@+id/settingsButton"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
        	android:layout_marginRight="12dp"
        	android:layout_marginEnd="12dp"
        	android:contentDescription="@string/settings"
	        android:background="@drawable/settings_button"
	        android:src="@drawable/settings_32_white" />
        
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true"
        	android:gravity="center"
        	android:text="@string/app_name"
        	android:textSize="24sp"
        	android:textStyle="bold"
        	android:textColor="#003377" >
       	</TextView>
       	
        <ImageButton
	        android:id="@+id/backButton"
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
        	android:contentDescription="@string/back"
        	android:scaleType="fitStart"
        	android:background="#0FFF"
	        android:src="@drawable/back_64_blue" />
       	
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/screenTitleRelativeLayout"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:background="@color/screenTitleBackground"
	    android:orientation="vertical"
	    android:layout_below="@+id/titleRelativeLayout" >
	    
        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/useful_numbers"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/screenTitleColor" />

	</RelativeLayout>
	
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/screenTitleRelativeLayout"
        android:layout_marginTop="30dp"
        android:textColor="@color/buttonText"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/university" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/buttonText"
        android:inputType="phone" >

    </EditText>
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/buttonText"
        android:inputType="phone" >

    </EditText>
        
    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/buttonText"
        android:inputType="phone" >

    </EditText>
    
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText3"
        android:textColor="@color/buttonText"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/police" />
    
    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView02"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/buttonText"
        android:inputType="phone" >

    </EditText>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText4"
        android:textColor="@color/buttonText"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/fire_brigade" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView03"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/buttonText"
        android:inputType="phone" >

    </EditText>
    
    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:textColor="@color/buttonText"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/hospital" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView04"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/buttonText"
        android:inputType="phone" >

    </EditText>
    
</RelativeLayout>