<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:layout_weight="1">
    
    <RelativeLayout android:id="@+id/primary_call_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/call_banner_height"
        android:paddingStart="@dimen/call_banner_side_padding"
        android:paddingEnd="@dimen/call_banner_side_padding"
        android:paddingTop="@dimen/call_banner_top_bottom_padding"
        android:paddingBottom="@dimen/call_banner_top_bottom_padding"
        android:background="@color/incall_call_banner_background"
        android:layout_alignParentTop="true">

        <TextView android:id="@+id/name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/call_banner_name_number_right_padding"
            android:paddingEnd="@dimen/call_banner_name_number_right_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:gravity="start"/>

        
		<TextView android:id="@+id/phoneNumber"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/name"
		    android:paddingRight="@dimen/call_banner_name_number_right_padding"
			android:paddingEnd="@dimen/call_banner_name_number_right_padding"
		    android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="@color/incall_call_banner_text_color"
		    android:singleLine="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/incomingcallLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/primary_call_banner"
        android:background="#BB0099DD" >
        
        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:text="@string/incoming_call" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/unknownphotoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/incomingcallLayout"
        android:background="#000000" >
        
        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:contentDescription="@string/background"
            android:src="@drawable/unknown_person" />
        
        <ImageButton
	        android:id="@+id/acceptButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:layout_marginBottom="60dp"
	        android:layout_marginLeft="50dp"
	        android:layout_marginStart="50dp"
	        android:contentDescription="@string/accept"
	        android:background="@drawable/call_button_shape"
	        android:src="@drawable/call_64_green"
	        android:minHeight="60dp"
	        android:minWidth="60dp" />
	
	    <ImageButton
	        android:id="@+id/declineButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/acceptButton"
	        android:layout_alignBottom="@+id/acceptButton"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:layout_marginRight="50dp"
	        android:layout_marginEnd="50dp"
	        android:contentDescription="@string/decline"
	        android:background="@drawable/call_end_button_shape"
	        android:src="@drawable/call_end_64_red"
	        android:minHeight="60dp"
	        android:minWidth="60dp" />
    </RelativeLayout>

</RelativeLayout>